--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,5 @@
 Practice/pattern printing (rectangle).exe
 Practice/Pattern printing using loops.o
+Practice/tax and salary calculation.exe
+Practice/average speed.exe
+Practice/Swapping.exe
