--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ Practice/Pattern printing using loops.o
 Practice/tax and salary calculation.exe
 Practice/average speed.exe
 Practice/Swapping.exe
+Practice/simple interest.exe
